<resources>
    <string name="app_name">Ma réu</string>
    <string name="menu_title">menu title</string>
    <string name="filter_by_hour">Filter by hour</string>
    <string name="filter_by_room">Filter by room</string>
    <string name="reset_list">Clear filter</string>

    <string name="rooms">Rooms</string>
    <string name="select_a_room_from_the_list">Select a room from the list</string>
    <string name="set_time">Set time</string>
    <string name="color_picker_for_choose_color">color picker for choose color</string>
    <string name="select_a_room">Select a room</string>
    <string name="subject">Subject</string>
    <string name="emails">Emails</string>
    <string name="insert_meeting">Insert meeting</string>
    <string name="field_necessary">*Champs nécessaire</string>
    <string name="email_invalid">*Adresse email invalide"</string>
</resources>