<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.fragments.AddMeetingButtonsFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.example.colorpicker.FloatingButton
            android:id="@+id/colorPickerButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="@color/red"
            android:contentDescription="@string/color_picker_for_choose_color"
            android:labelFor="@id/colorPickerButton" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <!-- TODO: Update blank fragment layout -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/set_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_time"
                android:text="@string/set_time"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:drawableTint="@color/blue" />

            <Space
                android:layout_width="30dp"
                android:layout_height="match_parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/rooms"
                style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                app:boxStrokeColor="@color/blue"
                app:hintTextColor="@color/blue"
                android:contentDescription="@string/select_a_room"
                app:startIconDrawable="@drawable/ic_baseline_meeting_room"
                app:startIconTint="@color/blue">

                <AutoCompleteTextView
                    android:id="@+id/room_selected"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:hint="@string/rooms"
                    android:inputType="none"
                    android:saveEnabled="false" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>